--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -34,5 +34,5 @@
 // @import '~bootstrap/scss/tooltip';
 // @import '~bootstrap/scss/popover';
 // @import '~bootstrap/scss/carousel';
-// @import '~bootstrap/scss/utilities';
+ @import '~bootstrap/scss/utilities';
 // @import '~bootstrap/scss/print';
