--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -16,8 +16,8 @@
 // @import '~bootstrap/scss/transitions';
 //@import '~bootstrap/scss/dropdown';
 // @import '~bootstrap/scss/button-group';
- @import '~bootstrap/scss/input-group';
- @import '~bootstrap/scss/custom-forms';
+@import '~bootstrap/scss/input-group';
+@import '~bootstrap/scss/custom-forms';
 // @import '~bootstrap/scss/nav';
 // @import '~bootstrap/scss/navbar';
 //@import '~bootstrap/scss/breadcrumb';
@@ -28,11 +28,13 @@
 // @import '~bootstrap/scss/alert';
 // @import '~bootstrap/scss/progress';
 // @import '~bootstrap/scss/media';
- @import '~bootstrap/scss/list-group';
- @import '~bootstrap/scss/close';
+@import '~bootstrap/scss/list-group';
+@import '~bootstrap/scss/close';
 @import '~bootstrap/scss/modal';
 // @import '~bootstrap/scss/tooltip';
 // @import '~bootstrap/scss/popover';
 // @import '~bootstrap/scss/carousel';
- @import '~bootstrap/scss/utilities';
+@import '~bootstrap/scss/utilities';
 // @import '~bootstrap/scss/print';
+
+@import 'animation';
