Remove png icons, Added svg icon.
Rename img-icon to svg-icon class name
Replace opacity to color on hover task name

--- a/src/scss/pages/_task-info.scss
+++ b/src/scss/pages/_task-info.scss
@@ -16,7 +16,7 @@
             font-size: 1rem;
         }
 
-        .img-icon {
+        .svg-icon {
             width: 18px;
             height: 18px;
 
