--- a/src/scss/pages/_task-list.scss
+++ b/src/scss/pages/_task-list.scss
@@ -49,10 +49,10 @@
 
         &__name {
             cursor: pointer;
-            transition: opacity 0.3s ease-in-out;
+            transition: color 0.3s ease-in-out;
 
             &:hover {
-                opacity: .7;
+                color: #007bff;
             }
         }
     }
