--- a/src/scss/pages/_tasks.scss
+++ b/src/scss/pages/_tasks.scss
@@ -6,7 +6,7 @@
 }
 
 
-.img-icon {
+.svg-icon {
     width: 12px;
     height: 12px;
 
@@ -19,10 +19,16 @@
 .btn-icon {
 
     &:hover {
-        opacity: .7;
+        color: #007bff;
+
+        .svg-icon {
+            fill: #007bff;
+            transform: rotateZ(180deg);
+        }
     }
 
-    &.btn {
-        transition: opacity 0.3s ease-in-out;
+    .svg-icon {
+        transition: 0.3s ease-in-out;
+        transition-property: fill, transform;
     }
 }
